2012-02-08 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-06-13
	* Smarter parameter updating when replacing module

2012-02-07 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-06-12
	* Extend search&replace to plugin type (for normal modules only)
	* tag V01-06-09/10/11
	* Extend module replacement to copys of modules or new instances

2012-02-03 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-08
	* Add/remove path to/from a primary dataset using Drag&Drop method (bug/feature 82526).

2012-02-02 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-07
	* Allow moving datasets from one stream to another (bug/feature 88066).
	* Add error alerts and revert operations for dataset transfer failures (bug/feature 88066). 
	* Put some more comments to (bug/feature 89524).
	
2012-01-31 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-06
	* Better implementation of SinglePathPrescaleTable and PrescaleTableService 
	  in different files, using class inheritance, and proper names.
	* Fix interference with the original prescale editor.

2012-01-30 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-05
	* Clear documentation panel (right upper panel) when a configuration is closed.
	* Make prescales table editable in documentation panel. (bug/feature 89524).
	* Add autosave for prescales embedded in documentation panel.

2012-01-27 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-04
	* Fix EventContent editor in Right Upper Panel. No panels were displayed
	  after clicking an EventContent.
	* Improves documentation fields panel to take up the maximum size.
	
2012-01-27 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-03
	* Add quotation marks to empty VInputTag values. bug #90850.
	
2012-01-26 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-02
	* Change host name for TEST2R setup to int2r1-s.cern.ch
